syntax = "proto3";

package g1.protocol;

import "common.proto";

enum EMysqlType {
    _MYSQL_TYPE_NONE = 0;

    MYSQL_TYPE_ROLE_INFO = 1;
//    MYSQL_TYPE_ROLE_DATA = 116;
}

// MYSQL_INNER_UPDATE_ROLE_INFO_REQ
message MysqlInnerUpdateRoleInfoReq {
    string name = 1;
}

message MysqlInnerUpdateRoleInfoRsp {
    Ret ret = 1;
}

// MYSQL_INNER_SEARCH_ROLE_REQ
message MysqlInnerSearchRoleReq {
    string search_string = 1;
}

message MysqlInnerSearchRoleRsp {
    Ret ret = 1;
    uint64 uid = 2;
}
